--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=51000
+server.port=50000
 spring.application.name=WebsiteTraining
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/websitespringboot
+spring.datasource.url=jdbc:mysql://localhost:3306/websitetraining
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
